kubernetes/app/my-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-api-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-api-app
  template:
    metadata:
      labels:
        app: my-api-app
    spec:
      containers:
        - name: my-api-app
          image: my-api:latest
          resources:
            requests:
              cpu: 250m
            limits:
              cpu: 500m
          imagePullPolicy: Never
          ports:
            - containerPort: 7778
