kubernetes/app/my-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-ui-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-ui-app
  template:
    metadata:
      labels:
        app: my-ui-app
    spec:
      containers:
        - name: my-ui-app
          image: my-ui:latest
          resources:
            requests:
              cpu: "250m"
            limits:
              cpu: "500m" 
          imagePullPolicy: Never
          ports:
            - containerPort: 7777
