kubernetes/app/my-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-api-app-service
spec:
  type: LoadBalancer
  ports:
  - port: 7778
    targetPort: 7778
    protocol: TCP
  selector:
    app: my-api-app
