kubernetes/app/my-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-ui-app-service
spec:
  type: LoadBalancer
  ports:
  - port: 7777
    targetPort: 7777
    protocol: TCP
  selector:
    app: my-ui-app
