kubernetes/app/my-app-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-nginx-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: my.kube
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-ui-app-service
                port:
                  number: 7777
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: my-api-app-service
                port:
                  number: 7778
